Fixed up the nav, may change mobile dropdown later, fixed mobile phones overflows.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,6 +4,7 @@
 //@import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
 //@import url('https://fonts.googleapis.com/css?family=Montserrat:900&display=swap');
 
+
 // Set your brand colors
 $purple: #00c9ff;
 $pink: rgb(104, 255, 210);
@@ -59,15 +60,96 @@ $input-shadow: none;
 .hamburger-custom{
     display: flex;
     margin-left: auto;
+    
     @include from($desktop){
         display: none;
     }
 
 } 
+.hamburger-inner {
+    background-color:white;
+    &::before{
+        background-color: white;
+    }
+    &::after{
+        background-color:white;
+    }
+    
+}
+
 
 .navbar-menu.is-active {
     animation: navAnim .2s linear;
 }
+
+.nav-button {
+    color: white;
+    margin: 20px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 8px;
+    padding-right: 8px;
+    height: 1.6rem;
+    width: auto;
+    font-size: 1.1rem;
+    font-weight: bold;
+    transition-duration: 0.4s;
+    box-sizing: initial;
+    &.with-border{
+       border: 2px solid white;
+       padding-left: 17px;
+       padding-right: 17px;
+       border-radius: 25px;
+
+    } &.with-border:hover{
+        border: 2px solid rgb(87, 87, 87);
+     }
+    &:hover{
+        color: rgb(87, 87, 87);
+    }
+    @include until($desktop){
+        color: black;
+        display: block;
+        text-align: center;
+        font-size: 2rem;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        text-transform: uppercase;
+        &.with-border{
+            border: unset;
+            padding-top: 6px;
+            padding-bottom: 6px;
+            padding-left: 8px;
+            padding-right: 8px;
+         }
+         &.with-border:hover{
+            border: unset;
+         }
+    }
+
+} 
+.hamburger {
+    padding: 15px 15px;
+    display: inline-block;
+    cursor: pointer;
+    transition-property: opacity, filter;
+    transition-duration: 0.15s;
+    transition-timing-function: linear;
+    font: inherit;
+    color: inherit;
+    text-transform: none;
+    background-color: transparent;
+    border: 0;
+    margin: 0;
+    overflow: visible; }
+    .hamburger:hover {
+      opacity: 0.7; }
+    .hamburger.is-active:hover {
+      opacity: 0.7; }
+    .hamburger.is-active .hamburger-inner,
+    .hamburger.is-active .hamburger-inner::before,
+    .hamburger.is-active .hamburger-inner::after {
+      background-color: #fff; }
 
 @keyframes navAnim {
     0% {
@@ -95,6 +177,8 @@ $input-shadow: none;
     width: 100%;
     height: 100%;
     z-index: -100;
+    overflow: hidden;
+    
 }
 
 .blue-azure {
@@ -182,6 +266,7 @@ $input-shadow: none;
     background: rgb(47, 47, 47);
     color: rgb(167, 167, 167);
     padding-bottom: 2rem;
+    overflow: hidden;
 }
 
 .footer h1 {
@@ -203,6 +288,4 @@ $input-shadow: none;
     background-position: 18%;
     z-index: -100;
 }
-
-
 
